# codewars-api-rs

./: Cargo.toml  LICENSE  README.md
examples/: get_first_authored_challenge.rs  get_first_authored_challenge.rs~  print_name.rs  print_skills_of_user_cli.rs
src/: lib.rs  rest_api.rs
src/rest_api/: client.rs  models.rs
tests/mocks/: get_authored_challenges.json  get_challenge.json
